# similarium

./: .gitignore  Dockerfile  LICENCE.txt  Makefile  README.md  alembic.ini  config.example.toml  config.toml  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  test.yml
alembic/: env.py
alembic/versions/: 08510c286a8c_add_missing_foreign_key.py  2446cc86658c_keep_reference_to_last_guesser_for_.py  a612cb489a61_add_many_to_many_game_user_winner_.py  be1adfbe5a43_add_stores_db_models_for_slack_state.py  d4438613fd7c_add_active_flag_on_channel.py  e181643294b6_migration_to_bring_db_to_correct_state_.py  ecf1160f6779_store_who_has_requested_hints.py  f58820236770_base.py  f602662cc9f9_add_created_timestamp_to_game_user_.py
docker/: Dockerfile  docker-compose.yaml  run.sh
scripts/: .gitignore  create_db.py  download-wordlists.sh  dump-hints.py  dump-vecs.py  dump.py  shell.py  store-hints.py
src/semantle_slack_bot/: app.py  config.py  db.py  event_types.py  exceptions.py  logging.py  model.py  slack.py  target_words.json  target_words.py  utils.py
src/semantle_slack_bot/models/: game.py  guess.py  nearby.py  similarity_range.py  user.py  word2vec.py
src/similarium/: __init__.py  ai.py  app.py  celebration.py  command.py  config.py  db.py  exceptions.py  game.py  logging.py  slack.py  spellings.py  target_words.py  tasks.py  utils.py
src/similarium/models/: __init__.py  channel.py  game.py  game_user_hint_association.py  game_user_winner_association.py  guess.py  nearby.py  similarity_range.py  stores.py  user.py  word2vec.py
tests/: conftest.py  init_db.py  test_utils.py
tests/integration/: test_db_models.py  test_game.py  test_stores.py  test_tasks.py
tests/unit/: test_ai.py  test_celebration.py  test_command.py  test_config.py  test_slack.py  test_spellings.py  test_utils.py
