[tool.poetry]
name = "similarium"
version = "1.8.3"
description = "A Slack bot to play Similarium together as a team"
authors = ["Axel <dev@absalon.is>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "~3.10"
slack-sdk = "^3.21.3"
slack-bolt = "^1.13.0"
aiohttp = "^3.8.5"
SQLAlchemy = "^1.4.35"
rich = "^13.5.2"
gensim = {version = "^4.1.2", optional = true}
numpy = {version = "^1.25.2", optional = true}
scipy = {version = "^1.11.1", optional = true}
toml = "^0.10.2"
aiosqlite = {version = "^0.18.0", optional = true}
asyncpg = {version = "^0.28.0", optional = true}
python-dateutil = "^2.8.2"
pytz = "^2022.1"
sentry-sdk = "^1.29.2"
alembic = "^1.11.2"
uvloop = "^0.17.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^23.7.0"
pyright = "^1.1.325"
ipdb = "^0.13.9"
pdbpp = "^0.10.3"
pytest = "^7.4.0"
pytest-clarity = "^1.0.1"
ipython = "^8.14.0"
sqlalchemy-stubs = "^0.4"
pytest-asyncio = "^0.20.3"

[tool.poetry.extras]
dump = ["numpy", "gensim", "scipy"]
sqlite = ["aiosqlite"]
postgres = ["asyncpg"]

[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
extra_standard_library = ["typing_extensions"]

[tool.black]
target-version = ["py310"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "tests"]

[tool.ruff]
ignore = ["A003"]
line-length = 120
unfixable = ["F841"]
select = [
    "A",
    "E",
    "F",
    "W",
]
